feat(auto-header): :sparkles: add automatic file headers feature with customizable templates

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,10 @@ jobs:
           - features: typescript-dev
             baseImage: mcr.microsoft.com/devcontainers/typescript-node:20
 
+          # auto-header - works on any base image with bash and python3
+          - features: auto-header
+            baseImage: ubuntu:latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
